--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@types/node": "^17.0.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "autoprefixer": "^10.4.6",
+    "gatsby-plugin-postcss": "^5.13.0",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   }
 }
