--- a/package.json
+++ b/package.json
@@ -13,20 +13,32 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest --env=jsdom"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "esm": "^3.2.25",
     "gatsby": "^4.13.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "@types/react-test-renderer": "^18.0.0",
     "autoprefixer": "^10.4.6",
+    "babel-jest": "^28.0.3",
+    "babel-preset-gatsby": "^2.13.0",
     "gatsby-plugin-postcss": "^5.13.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
     "postcss": "^8.4.13",
+    "react-test-renderer": "^18.1.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   }
