--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest --env=jsdom"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "classnames": "^2.3.1",
     "esm": "^3.2.25",
     "gatsby": "^4.13.0",
