--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
-    "test": "jest --env=jsdom"
+    "test": "jest --env=jsdom",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx,.json",
+    "lint-and-fix": "eslint . --ext .ts,.tsx,.js,.jsx,.json --fix",
+    "prettier-format": "prettier --config .prettierrc '**/*.{json,js,jsx,ts,tsx,css,scss,md}' --write"
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "classnames": "^2.3.1",
     "esm": "^3.2.25",
     "gatsby": "^4.13.0",
@@ -25,8 +30,6 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.26",
     "@types/react": "^17.0.44",
@@ -35,10 +38,22 @@
     "autoprefixer": "^10.4.6",
     "babel-jest": "^28.0.3",
     "babel-preset-gatsby": "^2.13.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "gatsby-plugin-postcss": "^5.13.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "postcss": "^8.4.13",
+    "prettier": "^2.3.2",
     "react-test-renderer": "^18.1.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
